--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
 
-Welcome To Gen's Programming Portfolio
+        Welcome To <em>Gen's</em> Programming Portfolio
     </body>
 </html>
