--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Gen's Programming Portfolio</title>
     </head>
     <body>
-
+<img src="csc106banner.jpg">
         Welcome To <em>Gen's</em> Programming Portfolio
     </body>
 </html>
