--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Gen's Programming Portfolio</title>
     </head>
     <body>
-<img src="csc106_banner.jpg">
+<img src="csc106_banner.jpg"> <br>
         Welcome To <em>Gen's</em> Programming Portfolio
     </body>
 </html>
