--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <img src="csc106_banner.jpg"> <br>
         
         Welcome To <em>Gen's</em> Programming Portfolio <br>
-        
+        <img src="csc106_homebutton.png">
         <img src="csc106_aboutmebutton.png">
     </body>
 </html>
