--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         
         Welcome To <em>Gen's</em> Programming Portfolio <br>
         <img src="csc106_homebutton.png">
-        <img src="csc106_javascriptsbutton">
+        <img src="csc106_javascriptsbutton.png">
         <img src="csc106_aboutmebutton.png">
     </body>
 </html>
