--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <body>
         
 <img src="csc106_banner.jpg"> <br>
-        
-        Welcome To <em>Gen's</em> Programming Portfolio <br>
         <img src="csc106_homebutton.png">
         <img src="csc106_javascriptsbutton.png">
         <img src="csc106_aboutmebutton.png">
+        <h1> Welcome To <em>Gen's</em> Programming Portfolio
     </body>
 </html>
