--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <img src="csc106_homebutton.png">
         <img src="csc106_javascriptsbutton.png">
         <img src="csc106_aboutmebutton.png">
-        <h1> Welcome To <em>Gen's</em> Programming Portfolio
+        <h1> Welcome To <em>Gen's</em> Programming Portfolio<h1>
             <p> My name is Genevieve Drouin. This website is a porfolio of programs I have written.</p>
     </body>
 </html>
