--- a/javascripts.html
+++ b/javascripts.html
@@ -10,7 +10,7 @@
         <img src="csc106_homebutton.png">
         <img src="csc106_javascriptsbutton.png">
         <img src="csc106_aboutmebutton.png">
-        <h1> Welcome To <em>Gen's</em> Programming Portfolio</h1>
-            <p> My name is Genevieve Drouin. This website is a porfolio of programs I have written.</p>
+        <h1><em>Gen's</em> JavaScript Programs</h1>
+            <p>This page has the JavaScript programs I have written for my CSC 106 class at the University of Rhode Island.</p>
     </body>
 </html>
