--- a/javascripts.html
+++ b/javascripts.html
@@ -11,6 +11,6 @@
         <img src="csc106_javascriptsbutton.png">
         <img src="csc106_aboutmebutton.png">
         <h1><em>Gen's</em> JavaScript Programs</h1>
-            <p>This page has the JavaScript programs I have written for my CSC 106 class at the University of Rhode Island.</p>
+            <p>This page has the JavaScript programs I have written for and in my CSC 106 class at the University of Rhode Island.</p>
     </body>
 </html>
