--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gen's Programming Portfolio</title>
+        <title>Gen's Programming Portfolio - About Me</title>
     </head>
     <body>
         
@@ -10,7 +10,7 @@
         <img src="csc106_homebutton.png">
         <img src="csc106_javascriptsbutton.png">
         <img src="csc106_aboutmebutton.png">
-        <h1> Welcome To <em>Gen's</em> Programming Portfolio</h1>
-            <p> My name is Genevieve Drouin. This website is a porfolio of programs I have written.</p>
+        <h1> About Me</h1>
+            <p> My name is Genevieve Drouin. I am a student at the University of Rhode Island. I have many hobbies and things I like to do. </p>
     </body>
 </html>
