--- a/javascripts.html
+++ b/javascripts.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gen's Programming Portfolio</title>
+        <title>Gen's Programming Portfolio - Programs</title>
     </head>
     <body>
         
