--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <img src="csc106_javascriptsbutton.png">
         <img src="csc106_aboutmebutton.png">
         <h1> Welcome To <em>Gen's</em> Programming Portfolio</h1>
-            <p> My name is Genevieve Drouin. This website is a porfolio of programs I have written.</p>
+            <p> My name is Genevieve Drouin. This website is a porfolio of programs I have written. This website is to show what I have created and what I like and like to do.</p>
     </body>
 </html>
