--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
         <img src="csc106_javascriptsbutton.png">
         <img src="csc106_aboutmebutton.png">
         <h1> About Me</h1>
-            <p> My name is Genevieve Drouin. I am a student at the University of Rhode Island. I have many hobbies and things I like to do. </p>
+            <p> My name is Genevieve Drouin. I am a student at the University of Rhode Island. I have many hobbies and things I like to do.<br>
+        I like playing video games with my friends, playing ping-pong, and roller scating.</p>
     </body>
 </html>
