--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
         <img src="csc106_aboutmebutton.png">
         <h1> About Me</h1>
             <p> My name is Genevieve Drouin. I am a student at the University of Rhode Island. I have many hobbies and things I like to do.<br>
-        I like playing video games with my friends, playing ping-pong, and roller scating. I like drawing and watching anime and many other movie seris. My best friends and I have known each other since we where in preschool and have a very close bond even if we don't talk everyday anymore. I have two cats I love dearly that are adorable and fluffy, I have always had a cat in the hosuehold since I was a baby and continue to love cats. My favorite animal is snow leopards.</p>
+        I like playing video games with my friends, playing ping-pong, and roller scating. I like drawing and watching anime and<br>
+                many other movie seris. My best friends and I have known each other since we where in preschool and have a very close bond even if we don't talk everyday anymore. I have two cats I love dearly that are adorable and fluffy, I have always had a cat in the hosuehold since I was a baby and continue to love cats. My favorite animal is snow leopards.</p>
     </body>
 </html>
