--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <body>
         
 <img src="csc106_banner.jpg"> <br>
-        <img src="csc106_homebutton.png">
-        <img src="csc106_javascriptsbutton.png">
-        <img src="csc106_aboutmebutton.png">
+        <table>
+            <tr>
+                <td><img src="csc106_homebutton.png"></td>
+                <td><img src="csc106_javascriptsbutton.png"></td>
+                <td><img src="csc106_aboutmebutton.png"></td>
+            </tr>
         <h1> Welcome To <em>Gen's</em> Programming Portfolio</h1>
             <p> My name is Genevieve Drouin. This website is a porfolio of programs I have written. This website is to show what I have<br> 
                 created and what I like and like to do.</p>
