--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <td><img src="csc106_javascriptsbutton.png"></td>
                 <td><img src="csc106_aboutmebutton.png"></td>
             </tr>
+        </table>
         <h1> Welcome To <em>Gen's</em> Programming Portfolio</h1>
             <p> My name is Genevieve Drouin. This website is a porfolio of programs I have written. This website is to show what I have<br> 
                 created and what I like and like to do.</p>
