--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
         <meta charset="utf-8">
         <title>Gen's Programming Portfolio</title>
     </head>
-    <body>
-        
-<img src="csc106_banner.jpg"> <br>
+    <body>     
+        <img src="csc106_banner.jpg"> <br>
         <table>
-            <tr>
-                <td><img src="csc106_homebutton.png"></td>
-                <td><img src="csc106_javascriptsbutton.png"></td>
-                <td><img src="csc106_aboutmebutton.png"></td>
-            </tr>
+            <thead>
+                <tr>
+                    <th><img src="csc106_homebutton.png"></th>
+                    <th><img src="csc106_javascriptsbutton.png"></th>
+                    <th><img src="csc106_aboutmebutton.png"></th>
+                </tr>
+            </thead>
         </table>
         <h1> Welcome To <em>Gen's</em> Programming Portfolio</h1>
             <p> My name is Genevieve Drouin. This website is a porfolio of programs I have written. This website is to show what I have<br> 
