--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <body>     
         <img src="csc106_banner.jpg"> <br>
         <table>
-            <thead>
                 <tr>
-                    <th><img src="csc106_homebutton.png"></th>
-                    <th><img src="csc106_javascriptsbutton.png"></th>
-                    <th><img src="csc106_aboutmebutton.png"></th>
+                    <th allign="center"><img src="csc106_homebutton.png"></th>
+                    <th allign="center"><img src="csc106_javascriptsbutton.png"></th>
+                    <th allign="center"><img src="csc106_aboutmebutton.png"></th>
                 </tr>
-            </thead>
         </table>
         <h1> Welcome To <em>Gen's</em> Programming Portfolio</h1>
             <p> My name is Genevieve Drouin. This website is a porfolio of programs I have written. This website is to show what I have<br> 
