--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>     
         <img src="csc106_banner.jpg"> <br>
-        <table>
+        <table width="800px">
                 <tr>
                     <th allign="center"><img src="csc106_homebutton.png"></th>
                     <th allign="center"><img src="csc106_javascriptsbutton.png"></th>
