--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 </tr>
         </table>
         <h1> Welcome To <em>Gen's</em> Programming Portfolio</h1>
-            <p> My name is Genevieve Drouin. This website is a porfolio of programs I have written. This website is to show what I have<br> 
-                created and what I like and like to do.</p>
+            <p> My name is Genevieve Drouin. This websight is my programming portfolio for my CSC106 class at the
+                <a href="http://www.uri.edu"> University of Rhode Island</a>.</p>
     </body>
 </html>
