--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
                     <th allign="center"><img src="csc106_aboutmebutton.png"></th>
                 </tr>
         </table>
-        <h1> Welcome To <em>Gen's</em> Programming Portfolio</h1>
+        <table width="800px">
+            <tr>
+                <th allign="center"><h1> Welcome To <em>Gen's</em> Programming Portfolio</h1></th>
+            </tr>
+        </table>
+        
             <p> My name is Genevieve Drouin. This websight is my programming portfolio for my CSC106 class at the
                 <a href="http://www.uri.edu"> University of Rhode Island</a>.</p>
     </body>
