--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <img src="csc106_banner.jpg"> <br>
         <table width="800px">
                 <tr>
-                    <td allign="center"><img src="csc106_homebutton.png"></td>
-                    <td allign="center"><img src="csc106_javascriptsbutton.png"></td>
-                    <td allign="center"><img src="csc106_aboutmebutton.png"></td>
+                    <td allign="center"><a href="https://gedrouin.github.io"><img src="csc106_homebutton.png"></td>
+                    <td allign="center"><a href="https://gedrouin.github.io/javascripts"><img src="csc106_javascriptsbutton.png"></td>
+                    <td allign="center"><a href=""><img src="csc106_aboutmebutton.png"></td>
                 </tr>
         </table>
         <table width="800px">
