--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </table>
         <table width="800px">
             <tr>
-                <td><p> My name is Genevieve Drouin. This websight is my programming portfolio for my CSC106 class at the
+                <td allign="center"><p> My name is Genevieve Drouin. This websight is my programming portfolio for my CSC106 class at the
                     <a href="http://www.uri.edu"> University of Rhode Island</a>. This website will have the programs I have written and some information about me.</p></td>
             </tr>
         </table>
