--- a/javascripts.html
+++ b/javascripts.html
@@ -2,15 +2,27 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gen's Programming Portfolio - Programs</title>
+        <title>Gen's Programming Portfolio</title>
     </head>
-    <body>
-        
-<img src="csc106_banner.jpg"> <br>
-        <img src="csc106_homebutton.png">
-        <img src="csc106_javascriptsbutton.png">
-        <img src="csc106_aboutmebutton.png">
-        <h1><em>Gen's</em> JavaScript Programs</h1>
-            <p>This page has the JavaScript programs I have written for and in my CSC 106 class at the University of Rhode Island.</p>
+    <body>     
+        <img src="csc106_banner.jpg"> <br>
+        <table width="800px">
+                <tr>
+                    <td allign="center"><a href="https://gedrouin.github.io"><img src="csc106_homebutton.png"></td>
+                    <td allign="center"><a href="https://gedrouin.github.io/javascripts"><img src="csc106_javascriptsbutton.png"></td>
+                    <td allign="center"><a href="https://gedrouin.github.io/about"><img src="csc106_aboutmebutton.png"></td>
+                </tr>
+        </table>
+        <table width="800px">
+            <tr>
+                <td allign="center"><h1>Gen's JavaScript Programs</h1></td>
+            </tr>
+        </table>
+        <table width="800px">
+            <tr>
+                <td> <p>This page has the JavaScript programs I have written for and in my CSC106 class at the
+                    <a href="http://www.uri.edu"> University of Rhode Island</a>.</p></td>
+            </tr>
+        </table>
     </body>
 </html>
