--- a/about.html
+++ b/about.html
@@ -4,17 +4,31 @@
         <meta charset="utf-8">
         <title>Gen's Programming Portfolio - About Me</title>
     </head>
-    <body>
-        
+    <body>   
 <img src="csc106_banner.jpg"> <br>
-        <img src="csc106_homebutton.png">
-        <img src="csc106_javascriptsbutton.png">
-        <img src="csc106_aboutmebutton.png">
-        <h1> About Me</h1>
-            <p> My name is Genevieve Drouin. I am a student at the University of Rhode Island. I have many hobbies and things I like to do.<br>
-        I like playing video games with my friends, playing ping-pong, and roller scating. I like drawing and watching anime and<br>
-                many other movie seris. My best friends and I have known each other since we where in preschool and have a very close bond<br>
-                even if we don't talk everyday anymore. I have two cats I love dearly that are adorable and fluffy, I have always had a cat in the<br>
-                hosuehold since I was a baby and continue to love cats. My favorite animal is snow leopards.</p>
+        <table>
+            <tr>
+                <td allign="center"><a href="https://gedrouin.github.io"><img src="csc106_homebutton.png"></td>
+                <td allign="center"><a href="https://gedrouin.github.io"><img src="csc106_javascriptsbutton.png"></td>
+                <td allign="center"><a href="https://gedrouin.github.io"><img src="csc106_aboutmebutton.png"></td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td allign="center"><h1> About Me</h1></td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td allign+"center"><p> My name is Genevieve Drouin. 
+                I am a student at the University of Rhode Island. 
+                I have many hobbies and things I like to do. 
+                I like playing video games with my friends, playing ping-pong, and roller scating. 
+                I like drawing and watching anime and many other movie seris. 
+                My best friends and I have known each other since we where in preschool and have a very close bond even if we don't talk everyday anymore. 
+                I have two cats I love dearly that are adorable and fluffy, I have always had a cat in the hosuehold since I was a baby and continue to love cats. 
+                    My favorite animal is snow leopards.</p></td>
+            </tr>
+        </table>
     </body>
 </html>
