--- a/about.html
+++ b/about.html
@@ -6,14 +6,14 @@
     </head>
     <body>   
 <img src="csc106_banner.jpg"> <br>
-        <table>
+        <table width="800px">
             <tr>
                 <td allign="center"><a href="https://gedrouin.github.io"><img src="csc106_homebutton.png"></td>
                 <td allign="center"><a href="https://gedrouin.github.io"><img src="csc106_javascriptsbutton.png"></td>
                 <td allign="center"><a href="https://gedrouin.github.io"><img src="csc106_aboutmebutton.png"></td>
             </tr>
         </table>
-        <table>
+        <table width="800px">
             <tr>
                 <td allign="center"><h1> About Me</h1></td>
             </tr>
@@ -21,7 +21,7 @@
         <table>
             <tr>
                 <td allign+"center"><p> My name is Genevieve Drouin. 
-                I am a student at the University of Rhode Island. 
+                    I am a student at the <a href="http://www.uri.edu">University of Rhode Island</a>. 
                 I have many hobbies and things I like to do. 
                 I like playing video games with my friends, playing ping-pong, and roller scating. 
                 I like drawing and watching anime and many other movie seris. 
