--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
                 <td allign="center"><h1> About Me</h1></td>
             </tr>
         </table>
-        <table>
+        <table width="800px">
             <tr>
                 <td allign+"center"><p> My name is Genevieve Drouin. 
                     I am a student at the <a href="http://www.uri.edu">University of Rhode Island</a>. 
