--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <title>Gen's Programming Portfolio</title>
     </head>
     <body>     
-        <img src="csc106_banner.jpg"> <br>
+        <img src="myBanner.jpg"> <br>
         <table width="975px">
                 <tr>
-                    <td allign="center"><a href="https://gedrouin.github.io"><img src="csc106_homebutton.png"></td>
-                    <td allign="center"><a href="https://gedrouin.github.io/javascripts"><img src="csc106_javascriptsbutton.png"></td>
-                    <td allign="center"><a href="https://gedrouin.github.io/about"><img src="csc106_aboutmebutton.png"></td>
+                    <td allign="center"><a href="https://gedrouin.github.io"><img src="homebutton.png"></td>
+                    <td allign="center"><a href="https://gedrouin.github.io/javascripts"><img src="javascritpsbutton.png"></td>
+                    <td allign="center"><a href="https://gedrouin.github.io/about"><img src="aboutbutton.png"></td>
                 </tr>
         </table>
         <table width="975px">
