--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     </head>
     <body>     
         <img src="myBanner.jpg"> <br>
-        <table width="975px">
+        <table width="px">
                 <tr>
                     <td allign="center"><a href="https://gedrouin.github.io"><img src="homebutton.png"></td>
+            </tr>
+            <tr>
                     <td allign="center"><a href="https://gedrouin.github.io/javascripts"><img src="javascritpsbutton.png"></td>
+            </tr>
+            <tr>
                     <td allign="center"><a href="https://gedrouin.github.io/about"><img src="aboutbutton.png"></td>
                 </tr>
         </table>
