--- a/index.html
+++ b/index.html
@@ -3,30 +3,24 @@
     <head>
         <meta charset="utf-8">
         <title>Gen's Programming Portfolio</title>
+        <style.
+                </style>
     </head>
     <body>     
         <img src="myBanner.jpg"> <br>
-        <table width="px">
+        <table width="1000px">
                 <tr>
                     <td allign="center"><a href="https://gedrouin.github.io"><img src="homebutton.png"></td>
-            </tr>
-            <tr>
+                </tr>
+                <tr>
                     <td allign="center"><a href="https://gedrouin.github.io/javascripts"><img src="javascritpsbutton.png"></td>
-            </tr>
-            <tr>
+                </tr>
+                <tr>
                     <td allign="center"><a href="https://gedrouin.github.io/about"><img src="aboutbutton.png"></td>
                 </tr>
         </table>
-        <table width="975px">
-            <tr>
-                <td allign="center"><h1> Welcome To <em>Gen's</em> Programming Portfolio</h1></td>
-            </tr>
-        </table>
-        <table width="975px">
-            <tr>
-                <td><p> My name is Genevieve Drouin. This websight is my programming portfolio for my CSC106 class at the
-                    <a href="http://www.uri.edu"> University of Rhode Island</a>. This website will have the programs I have written and some information about me.</p></td>
-            </tr>
-        </table>
+        <h1> Welcome To <em>Gen's</em> Programming Portfolio</h1>
+        <p> My name is Genevieve Drouin. This websight is my programming portfolio for my CSC106 class at the
+                    <a href="http://www.uri.edu"> University of Rhode Island</a>. This website will have the programs I have written and some information about me.</p>
     </body>
 </html>
