--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Gen's Programming Portfolio</title>
-        <style.
-                </style>
+        <style>
+        </style>
     </head>
     <body>     
         <img src="myBanner.jpg"> <br>
