--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <title>Gen's Programming Portfolio</title>
         <style>
+            h1{
+                width:900px;
+                float:right;}
         </style>
     </head>
     <body>     
