--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Gen's Programming Portfolio</title>
         <style>
             h1{
+                font:inkfree; 
                 width:900px;
                 float:right;}
         </style>
@@ -23,7 +24,5 @@
                 </tr>
         </table>
         <h1> Welcome To <em>Gen's</em> Programming Portfolio</h1>
-        <p> My name is Genevieve Drouin. This websight is my programming portfolio for my CSC106 class at the
-                    <a href="http://www.uri.edu"> University of Rhode Island</a>. This website will have the programs I have written and some information about me.</p>
     </body>
 </html>
