--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
         <meta charset="utf-8">
         <title>Gen's Programming Portfolio</title>
         <style>
-            h1{
-                font:inkfree; 
-                width:900px;
-                float:right;}
+            #banner{
+                float:center;
+            }
+            #buttons{
+                float:left;
+            }
         </style>
     </head>
     <body>     
-        <img src="myBanner.jpg"> <br>
-        <table width="1000px">
+        <img id="banner" src="myBanner.jpg"> <br>
+        <table id="buttons" width="1000px">
                 <tr>
                     <td allign="center"><a href="https://gedrouin.github.io"><img src="homebutton.png"></td>
                 </tr>
