--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
         <title>Gen's Programming Portfolio</title>
         <style>
             #banner{
-                float:center;
+                float:right;
             }
             #buttons{
                 float:left;
+            }
+            h1{
+                float:right;
+            }
+            p{
+                float:right;
             }
         </style>
     </head>
@@ -26,5 +32,7 @@
                 </tr>
         </table>
         <h1> Welcome To <em>Gen's</em> Programming Portfolio</h1>
+         <p> My name is Genevieve Drouin. This websight is my programming portfolio for my CSC106 class at the
+                    <a href="http://www.uri.edu"> University of Rhode Island</a>. This website will have the programs I have written and some information about me.</p>
     </body>
 </html>
