--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>Gen's Programming Portfolio</title>
         <style>
             #banner{
-                float:right;
+                width:3000
+                float:center;
             }
             #buttons{
                 float:left;
