--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             #banner{
                 width:3000;
                 float:center;
+                margin-bottom:6px;
             }
             #buttons{
                 float:left;
