--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Gen's Programming Portfolio</title>
         <style>
             #banner{
-                width:3000;
+                width:3000px;
                 float:center;
                 margin-bottom:6px;
             }
