--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <title>Gen's Programming Portfolio</title>
         <style>
             #banner{
-                width:3000px;
-                float:center;
+                width:2500px;
                 margin-bottom:6px;
             }
             #buttons{
+                width:;
                 float:left;
             }
             h1{
