--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Gen's Programming Portfolio</title>
         <style>
             #banner{
+                width:1500px;
                 margin-bottom:6px;
             }
             #buttons{
