--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>Gen's Programming Portfolio</title>
         <style>
             #banner{
-                width:1500px;
+                width:1550px;
+                float:center;
                 margin-bottom:6px;
             }
             #buttons{
