--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 margin-bottom:6px;
             }
             #buttons{
-                width:;
+                width:150px;
                 float:left;
             }
             h1{
