--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
                 margin-bottom:6px;
             }
             #buttons{
-                width:150px;
                 float:left;
+                margin-right:25px;
             }
             h1{
                 float:right;
