--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             }
             h1{
                 float:right;
+                margin-left:10px;
             }
         </style>
     </head>
