--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 float:right;
                 margin-left:10px;
             }
+            p{
+                float:right;
+            }
         </style>
     </head>
     <body>     
