--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <style>
             #banner{
                 width:1525px;
-                float:center;
+                float:middle;
                 margin-bottom:6px;
             }
             #buttons{
