--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             }
             h1{
                 float:right;
-                margin-left:10px;
+                margin-right:5px;
             }
             p{
                 float:right;
