--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 margin-right:5px;
             }
             p{
-                float:right;
+                float:left;
             }
         </style>
     </head>
