--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             }
             #buttons{
                 float:left;
-                margin-right:5px;
+                margin-right:25px;
             }
             h1{
-                float:right;
+                float:left;
                 margin-right:5px;
             }
             p{
