--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             p{
                 float:left;
             }
+             boady{
+                background:<img src="background.jpg">
+            }
         </style>
     </head>
     <body>     
