--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             p{
                 float:left;
             }
-             boady{
-                background:#00FA9A;
+             body{
+                background:<img src="background.jpg">
             }
         </style>
     </head>
