--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 float:left;
             }
              body{
-                background:<img src="background.jpg">
+                background:<img src="background.jpg">;
             }
         </style>
     </head>
