--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 float:left;
             }
              body{
-                background:<img src="background.jpg">;
+                background:#00FA9A;
             }
         </style>
     </head>
