--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
             }
             #buttons{
                 float:left;
-                margin-right:75px;
+                margin-right:200px;
             }
             h1{
                 float:left;
-                margin-right:75px;
+                margin-right:200px;
             }
             p{
                 float:left;
             }
              body{
-                background:#00FA9A;
+                background:#E6E6FA;
             }
         </style>
     </head>
