--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             }
             p{
                 float:left;
+                font: ink free;
             }
              body{
                 background:#E6E6FA;
