--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         </table>
         <h1> Welcome To <em>Gen's</em> Programming Portfolio</h1><br>
          <p> My name is Genevieve Drouin. This websight is my programming portfolio for my CSC106 class at the
-                    <a href="http://www.uri.edu"> University of Rhode Island</a>. This website will have the programs I have written and some information about me.</p>
+                    <a href="http://www.uri.edu"> University of Rhode Island</a>. This website will have the programs I have written and some information about me.</p><br>
+        <img src="
     </body>
 </html>
