--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
         <h1> Welcome To <em>Gen's</em> Programming Portfolio</h1><br>
          <p> My name is Genevieve Drouin. This websight is my programming portfolio for my CSC106 class at the
                     <a href="http://www.uri.edu"> University of Rhode Island</a>. This website will have the programs I have written and some information about me.</p><br>
-        <img id=1 src="genevieve.1">
+        <img src="genevieve.1">
     </body>
 </html>
