--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
              body{
                 background:#E6E6FA;
             }
+            #img1{
+                rotate:90degrees;
         </style>
     </head>
     <body>     
@@ -42,6 +44,6 @@
         <h1> Welcome To <em>Gen's</em> Programming Portfolio</h1><br>
          <p> My name is Genevieve Drouin. This websight is my programming portfolio for my CSC106 class at the
                     <a href="http://www.uri.edu"> University of Rhode Island</a>. This website will have the programs I have written and some information about me.</p><br>
-        <img src="genevieve.1.jpg">
+        <img id="img1" src="genevieve.1.jpg">
     </body>
 </html>
