--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 background:#E6E6FA;
             }
             #img1{
-                rotate:90degrees;
+                transform:rotate(90deg);
         </style>
     </head>
     <body>     
