--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 background:#E6E6FA;
             }
             #img1{
-                transform:rotate(260deg);
+                transform:rotate(275eg);
         </style>
     </head>
     <body>     
