--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             }
             #img1{
                 transform:rotate(270deg);
+                width:500px;
         </style>
     </head>
     <body>     
