--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             #img1{
                 transform:rotate(270deg);
                 width:500px;
+                float:center;
         </style>
     </head>
     <body>     
