--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             #img1{
                 transform:rotate(270deg);
                 width:500px;
-                float:center;
+                transform:right(200px);
         </style>
     </head>
     <body>     
