--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             #img1{
                 transform:rotate(270deg);
                 width:500px;
-                float:right;
+                float:left;
+                margin-left:200px;
         </style>
     </head>
     <body>     
