--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             }
             p{
                 float:left;
-                font: ink free;
+                font-family:ink free;
             }
              body{
                 background:#E6E6FA;
@@ -28,7 +28,7 @@
                 transform:rotate(270deg);
                 width:500px;
                 float:left;
-                margin-left:200px;
+                margin-left:400px;
         </style>
     </head>
     <body>     
