--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             p{
                 float:left;
                 font-family:ink free;
+                margin-bottom:60px;
             }
              body{
                 background:#E6E6FA;
