--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 width:500px;
                 float:left;
                 margin-left:500px;
+                margin-up:-300px;
         </style>
     </head>
     <body>     
