--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             p{
                 float:left;
                 font-family:ink free;
-                margin-bottom:-300px;
+                margin-bottom:50px;
             }
              body{
                 background:#E6E6FA;
@@ -30,7 +30,7 @@
                 width:500px;
                 float:left;
                 margin-left:500px;
-                margin-up:-300px;
+                size:25%;
         </style>
     </head>
     <body>     
