--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
             }
             #img1{
                 transform:rotate(270deg);
-                width:500px;
-                float:left;
+                float:right;
                 margin-left:500px;
                 width:200px;
         </style>
