--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 float:left;
                 font-family:ink free;
                 margin-bottom:50px;
+                width:700px;
             }
              body{
                 background:#E6E6FA;
