--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             }
             #img1{
                 transform:rotate(270deg);
-                float:right;
+                float:left;
                 margin-left:500px;
                 width:200px;
             }
