--- a/javascripts.html
+++ b/javascripts.html
@@ -3,6 +3,28 @@
     <head>
         <meta charset="utf-8">
         <title>Gen's Programming Portfolio</title>
+        <style>
+            #banner{
+                width:1500px;
+                float:middle;
+                margin-bottom:6px;
+            }
+            #buttons{
+                float:left;
+                margin-right:300px;
+            }
+            h1{
+                float:left;
+            }
+            p{
+                float:left;
+                font-family:ink free;
+                margin-bottom:6px;
+                width:700px;
+            }
+             body{
+                background:#E6E6FA;
+            }
     </head>
     <body>     
         <img src="csc106_banner.jpg"> <br>
