--- a/javascripts.html
+++ b/javascripts.html
@@ -27,12 +27,12 @@
             }
     </head>
     <body>     
-        <img src="csc106_banner.jpg"> <br>
+        <img src="myBanner.jpg"> <br>
         <table width="975px">
                 <tr>
-                    <td allign="center"><a href="https://gedrouin.github.io"><img src="csc106_homebutton.png"></td>
-                    <td allign="center"><a href="https://gedrouin.github.io/javascripts"><img src="csc106_javascriptsbutton.png"></td>
-                    <td allign="center"><a href="https://gedrouin.github.io/about"><img src="csc106_aboutmebutton.png"></td>
+                    <td allign="center"><a href="https://gedrouin.github.io"><img src="homebutton.png"></td>
+                    <td allign="center"><a href="https://gedrouin.github.io/javascripts"><img src="javascriptsbutton.png"></td>
+                    <td allign="center"><a href="https://gedrouin.github.io/about"><img src="aboutbutton.png"></td>
                 </tr>
         </table>
         <table width="975px">
