--- a/javascripts.html
+++ b/javascripts.html
@@ -25,6 +25,7 @@
              body{
                 background:#E6E6FA;
             }
+        </style>
     </head>
     <body>     
         <img src="myBanner.jpg"> <br>
