--- a/javascripts.html
+++ b/javascripts.html
@@ -32,7 +32,7 @@
         <table width="975px">
                 <tr>
                     <td allign="center"><a href="https://gedrouin.github.io"><img src="homebutton.png"></td>
-                    <td allign="center"><a href="https://gedrouin.github.io/javascripts"><img src="javascriptsbutton.png"></td>
+                    <td allign="center"><a href="https://gedrouin.github.io/javascripts"><img src="javascritpsbutton.png"></td>
                     <td allign="center"><a href="https://gedrouin.github.io/about"><img src="aboutbutton.png"></td>
                 </tr>
         </table>
