--- a/javascripts.html
+++ b/javascripts.html
@@ -5,7 +5,7 @@
         <title>Gen's Programming Portfolio</title>
         <style>
             #banner{
-                width:1500px;
+                width:1510px;
                 float:middle;
                 margin-bottom:6px;
             }
@@ -14,10 +14,10 @@
                 margin-right:300px;
             }
             h1{
-                float:left;
+                float:right;
             }
             p{
-                float:left;
+                float:right;
                 font-family:ink free;
                 margin-bottom:6px;
                 width:700px;
