--- a/javascripts.html
+++ b/javascripts.html
@@ -5,6 +5,7 @@
         <title>Gen's Programming Portfolio</title>
         <style>
             #banner{
+                width:1500px;
                 float:middle;
                 margin-bottom:6px;
             }
@@ -27,8 +28,8 @@
         </style>
     </head>
     <body>     
-        <img src="myBanner.jpg"> <br>
-        <table width="975px">
+        <img id="banner" src="myBanner.jpg"> <br>
+        <table id="buttons" width="975px">
                 <tr>
                     <td allign="center"><a href="https://gedrouin.github.io"><img src="homebutton.png"></td>
                 </tr>
