--- a/javascripts.html
+++ b/javascripts.html
@@ -11,13 +11,13 @@
             }
             #buttons{
                 float:left;
-                margin-right:10px;
+                margin-right:300px;
             }
             h1{
-                float:right;
+                float:left;
             }
             p{
-                float:right;
+                float:left;
                 font-family:ink free;
                 margin-bottom:6px;
                 width:700px;
