--- a/javascripts.html
+++ b/javascripts.html
@@ -14,7 +14,7 @@
                 margin-right:300px;
             }
             h1{
-                float:right;
+                float:left;
             }
             p{
                 float:left;
