--- a/javascripts.html
+++ b/javascripts.html
@@ -15,6 +15,7 @@
             }
             h1{
                 float:left;
+                margin-left:150px;
             }
             p{
                 float:left;
