--- a/about.html
+++ b/about.html
@@ -3,13 +3,40 @@
     <head>
         <meta charset="utf-8">
         <title>Gen's Programming Portfolio - About Me</title>
+         <style>
+            #banner{
+                width:1500px;
+                float:middle;
+                margin-bottom:6px;
+            }
+            #buttons{
+                float:left;
+                margin-right:300px;
+            }
+            h1{
+                float:left;
+                margin-left:150px;
+            }
+            p{
+                float:left;
+                font-family:ink free;
+                margin-bottom:6px;
+                width:700px;
+            }
+             body{
+                background:#E6E6FA;
+            }
     </head>
     <body>   
-<img src="csc106_banner.jpg"> <br>
-        <table width="975px">
+<img id="banner" src="csc106_banner.jpg"> <br>
+        <table id="buttons" width="200px">
             <tr>
                 <td allign="center"><a href="https://gedrouin.github.io"><img src="csc106_homebutton.png"></td>
+            </tr>
+            <tr>
                 <td allign="center"><a href="https://gedrouin.github.io"><img src="csc106_javascriptsbutton.png"></td>
+             </tr>
+             <tr>
                 <td allign="center"><a href="https://gedrouin.github.io"><img src="csc106_aboutmebutton.png"></td>
             </tr>
         </table>
