--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
              body{
                 background:#E6E6FA;
             }
+        </style>
     </head>
     <body>   
 <img id="banner" src="csc106_banner.jpg"> <br>
