--- a/about.html
+++ b/about.html
@@ -29,16 +29,16 @@
         </style>
     </head>
     <body>   
-<img id="banner" src="csc106_banner.jpg"> <br>
+<img id="banner" src="myBanner.jpg"> <br>
         <table id="buttons" width="200px">
             <tr>
-                <td allign="center"><a href="https://gedrouin.github.io"><img src="csc106_homebutton.png"></td>
+                <td allign="center"><a href="https://gedrouin.github.io"><img src="homebutton.png"></td>
             </tr>
             <tr>
-                <td allign="center"><a href="https://gedrouin.github.io"><img src="csc106_javascriptsbutton.png"></td>
+                <td allign="center"><a href="https://gedrouin.github.io"><img src="javascritpsbutton.png"></td>
              </tr>
              <tr>
-                <td allign="center"><a href="https://gedrouin.github.io"><img src="csc106_aboutmebutton.png"></td>
+                <td allign="center"><a href="https://gedrouin.github.io"><img src="aboutbutton.png"></td>
             </tr>
         </table>
         <table width="975px">
