--- a/about.html
+++ b/about.html
@@ -41,22 +41,15 @@
                 <td allign="center"><a href="https://gedrouin.github.io"><img src="aboutbutton.png"></td>
             </tr>
         </table>
-        <table width="975px">
-            <tr>
-                <td allign="center"><h1> About Me</h1></td>
-            </tr>
-        </table>
-        <table width="975px">
-            <tr>
-                <td allign+"center"><p> My name is Genevieve Drouin. 
+      <h1> About Me</h1>
+      <p> My name is Genevieve Drouin. 
                     I am a student at the <a href="http://www.uri.edu">University of Rhode Island</a>. 
                 I have many hobbies and things I like to do. 
                 I like playing video games with my friends, playing ping-pong, and roller scating. 
                 I like drawing and watching anime and many other movie seris. 
                 My best friends and I have known each other since we where in preschool and have a very close bond even if we don't talk everyday anymore. 
                 I have two cats I love dearly that are adorable and fluffy, I have always had a cat in the hosuehold since I was a baby and continue to love cats. 
-                    My favorite animal is snow leopards.</p></td>
-            </tr>
-        </table>
+                    My favorite animal is snow leopards.</p>
+        
     </body>
 </html>
