--- a/about.html
+++ b/about.html
@@ -50,6 +50,9 @@
                 My best friends and I have known each other since we where in preschool and have a very close bond even if we don't talk everyday anymore. 
                 I have two cats I love dearly that are adorable and fluffy, I have always had a cat in the hosuehold since I was a baby and continue to love cats. 
                     My favorite animal is snow leopards.</p>
-        <img id="img2" src="
+        <img id="img2" src="genevieve2">
+        <img id="img3" src="abbie">
+        <img id="img4" src="sam">
+        <img id="img5" src="trio">
     </body>
 </html>
