--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                 <td allign="center"><a href="https://gedrouin.github.io"><img src="aboutbutton.png"></td>
             </tr>
         </table>
-      <h1> About Me</h1>
+      <h1> About Me</h1><br>
       <p> My name is Genevieve Drouin. 
                     I am a student at the <a href="http://www.uri.edu">University of Rhode Island</a>. 
                 I have many hobbies and things I like to do. 
