--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
                 float:left;
                 font-family:ink free;
                 margin-bottom:6px;
+                margin-left:10px;
                 width:700px;
             }
              body{
