--- a/about.html
+++ b/about.html
@@ -27,6 +27,14 @@
              body{
                 background:#E6E6FA;
             }
+             #img2{
+                 width:250;
+                 float:left;
+             }
+             #img3{
+                 width:250;
+                 float:left;
+             }
         </style>
     </head>
     <body>   
