--- a/about.html
+++ b/about.html
@@ -28,11 +28,11 @@
                 background:#E6E6FA;
             }
              #img2{
-                 width:250;
+                 width:250px;
                  float:left;
              }
              #img3{
-                 width:250;
+                 width:250px;
                  float:left;
              }
         </style>
