--- a/about.html
+++ b/about.html
@@ -35,6 +35,14 @@
                  width:250px;
                  float:left;
              }
+             #img4{
+                 width:250px;
+                 float:left;
+             }
+             #img5{
+                 width:250px;
+                 float:left;
+             }
         </style>
     </head>
     <body>   
