--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
                 margin-bottom:6px;
                 margin-left:500px;
                 width:700px;
+                margin-right:300px;
             }
              body{
                 background:#E6E6FA;
