--- a/about.html
+++ b/about.html
@@ -31,18 +31,22 @@
              #img2{
                  width:223px;
                  float:left;
+                 margin-right:5px;
              }
              #img3{
                  width:250px;
                  float:left;
+                 margin-right:5px;
              }
              #img4{
                  width:250px;
                  float:left;
+                 margin-right:5px;
              }
              #img5{
                  width:250px;
                  float:left;
+                 margin-right:5px;
              }
         </style>
     </head>
