--- a/about.html
+++ b/about.html
@@ -47,6 +47,7 @@
                  width:250px;
                  float:left;
                  margin-right:5px;
+                 transform:rotate(250deg);
              }
         </style>
     </head>
