--- a/about.html
+++ b/about.html
@@ -48,6 +48,7 @@
                  float:left;
                  margin-right:5px;
                  transform:rotate(270deg);
+                 margin-left:50px;
              }
         </style>
     </head>
