--- a/about.html
+++ b/about.html
@@ -78,5 +78,8 @@
         <img id="img3" src="abbie.jpg">
         <img id="img4" src="sam.jpg">
         <img id="img5" src="trio.jpg">
+        <img id="img6" src="skipper.jpg">
+        <img id="img7" src="marianne.jpg">
+        <img id="img8" src="cats.jpg">
     </body>
 </html>
