--- a/about.html
+++ b/about.html
@@ -50,6 +50,18 @@
                  transform:rotate(270deg);
                  margin-left:125px;
              }
+             #img6{
+                 width:250px;
+                 float:left;
+             }
+             #img7{
+                 width:250px;
+                 float:left;
+             }
+             #img8{
+                 width:250px;
+                 float:left;
+             }    
         </style>
     </head>
     <body>   
