--- a/about.html
+++ b/about.html
@@ -49,6 +49,7 @@
                  margin-right:5px;
                  transform:rotate(270deg);
                  margin-left:125px;
+                 transform:up(100px;
              }
              #img6{
                  width:250px;
