--- a/about.html
+++ b/about.html
@@ -54,6 +54,8 @@
              #img6{
                  width:250px;
                  float:left;
+                 transform:rotate(270deg);
+                 transform:up(100px);
              }
              #img7{
                  width:250px;
