--- a/about.html
+++ b/about.html
@@ -52,10 +52,13 @@
                  float:up;
              }
              #img6{
-                 width:200px;
+                 width:250px;
                  float:left;
                  transform:rotate(270deg);
              }   
+             #img7{
+                 width:250;
+             }
         </style>
     </head>
     <body>   
