--- a/about.html
+++ b/about.html
@@ -56,7 +56,11 @@
                  float:left;
              }   
              #img7{
-                 width:250;
+                 width:250px;
+                 transform:rotate(270px);
+             }
+             #img8{
+                 width:250px;
              }
         </style>
     </head>
