--- a/about.html
+++ b/about.html
@@ -58,9 +58,11 @@
              #img7{
                  width:250px;
                  transform:rotate(270px);
+                 float:left;
              }
              #img8{
                  width:250px;
+                 float:left;
              }
         </style>
     </head>
