--- a/javascripts.html
+++ b/javascripts.html
@@ -50,6 +50,7 @@
             <tr>
                 <td> <p>This page has the JavaScript programs I have written for and in my CSC106 class at the
                     <a href="http://www.uri.edu"> University of Rhode Island</a>.</p></td>
+                <h2><a href="https://www.khanacademy.org/computer-programming/drouin_bitmoji/4987991912660992">drouin_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/drouin_bitmoji/4987991912660992/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
             </tr>
         </table>
     </body>
