--- a/Checkers.html
+++ b/Checkers.html
@@ -47,9 +47,7 @@
                     <td allign="center"><a href="https://gedrouin.github.io/about"><img src="aboutbutton.png"></td>
                 </tr>
         </table>
-        <h1> Welcome To <em>Gen's</em> Programming Portfolio</h1><br>
-         <p> My name is Genevieve Drouin. This websight is my programming portfolio for my CSC106 class at the
-                    <a href="http://www.uri.edu"> University of Rhode Island</a>. This website will have the programs I have written and some information about me.</p><br>
-        <img id="img1" src="genevieve.1.jpg">
+        <h1> Welcome To <em>Gen's</em> Checkers Game</h1><br>
+        <p> </p>
     </body>
 </html>
