--- a/about.html
+++ b/about.html
@@ -73,6 +73,9 @@
              <tr>
                 <td allign="center"><a href="https://gedrouin.github.io"><img src="aboutbutton.png"></td>
             </tr>
+            <tr>
+                    <td allign="center"><a href="https://gedrouin.github.io/Checkers"><img src="Untitled.png"></td>
+                </tr>
         </table>
       <h1> About Me</h1><br>
       <p> My name is Genevieve Drouin. 
