--- a/Checkers.html
+++ b/Checkers.html
@@ -46,6 +46,9 @@
                 <tr>
                     <td allign="center"><a href="https://gedrouin.github.io/about"><img src="aboutbutton.png"></td>
                 </tr>
+                <tr>
+                    <td allign="center"><a href="https://gedrouin.github.io/Checkers"><img src="Untitled.png"></td>
+                </tr>
         </table>
         <h1> Welcome To <em>Gen's</em> Checkers Game</h1><br>
         <p> </p>
