--- a/Checkers.html
+++ b/Checkers.html
@@ -51,6 +51,7 @@
                 </tr>
         </table>
         <h1> Welcome To <em>Gen's</em> Checkers Game</h1><br>
-        <p> </p>
+        <p> The players turn is shown in the top right corner. To pick the checker you want to move you hover the mouse over it and click it. Then you select the
+        space you would like to move that checker to.</p>
     </body>
 </html>
