--- a/Checkers.html
+++ b/Checkers.html
@@ -51,7 +51,7 @@
                 </tr>
         </table>
         <h1> Welcome To <em>Gen's</em> Checkers Game</h1><br>
-        <p> The players turn is shown in the top right corner. To pick the checker you want to move you hover the mouse over it and click it. Then you select the
-        space you would like to move that checker to.</p>
+        <p> To start the game you press the start button. The timer starts as soon as you press start. The players turn is shown in the top right corner. To pick the checker you want to move you hover the mouse over it and click it. 
+            Then you select the space you would like to move that checker to. Then it is the next players turn. Your objective is to get all of your opponants peices off the board.</p>
     </body>
 </html>
