--- a/Checkers.html
+++ b/Checkers.html
@@ -63,4 +63,5 @@
         </table>
     </body>
         <h2><a href="https://www.khanacademy.org/computer-programming/spin-off-of-final-exam-drouin-nicolau/4985960307146752">Spin-off of "Final Exam Drouin Nicolau"</a></h2><script src="https://www.khanacademy.org/computer-programming/spin-off-of-final-exam-drouin-nicolau/4985960307146752/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/46979O6HWis" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </html>
